added design principle content

--- a/style.css
+++ b/style.css
@@ -55,9 +55,17 @@ code {
 }
 
 ul {
-  list-style-type: square;
-  max-width: 800px;
-  margin: 0 auto;
+  list-style-type: none;
+  margin-top: 2rem;
+}
+
+ul li::before {
+  content: "■"; /* Add content: \2022 is the CSS Code/unicode for a bullet */
+  color: #34a1cd; /* Change the color */
+  font-weight: bold; /* If you want it to be bold */
+  display: inline-block; /* Needed to add space between the bullet and the text */
+  width: 1em; /* Also needed for space (tweak if needed) */
+  margin-left: -1em; /* Also needed for space (tweak if needed) */
 }
 
 .navigation {
@@ -203,7 +211,7 @@ input {
 
 .article-heading {
   text-align: center;
-  line-height: 5rem;
+  margin-bottom: 2rem;
 }
 
 .image {
@@ -250,6 +258,32 @@ input {
   margin: 30px auto;
 }
 
+.html-html5,
+.tags-html,
+.attributes-html,
+.display-values,
+.comments,
+.favicon,
+.used-tags,
+.conclusion,
+.design-web-design,
+.website-purpose,
+.core-purposes,
+.simplicity-design,
+.simplicity-design-importance,
+.visual-hierarchy,
+.visual-hierarchy-example .focal-point,
+.f-pattern,
+.z-pattern,
+.colors,
+.color-wheel,
+.color-psychology,
+.color-palette,
+.typography,
+.typography-principles {
+  margin-top: 5rem;
+}
+
 .table-design {
   max-width: 1000px;
   margin: 30px auto 0 auto;
@@ -281,12 +315,17 @@ td {
 .article-heading h3 {
   font-size: 1.5rem;
   max-width: 1000px;
-  margin: 0 auto;
+  margin: 4rem auto 0 auto;
   text-align: left;
 }
 
 .example {
   width: 700px;
+}
+
+.design-conclusion {
+  word-wrap: break-word;
+  margin: 0 auto;
 }
 
 footer p {
