--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ ul li::before {
 }
 
 .navigation {
-  height: 30vh;
+  height: 20vh;
   display: flex;
 }
 
@@ -160,7 +160,7 @@ input {
   padding: 1.5rem 0 1.5rem 1rem;
 }
 
-.newsletter #email {
+.newsletter .email {
   width: 15rem;
   background-color: #f7f6fb;
   border-radius: 10px;
@@ -168,12 +168,12 @@ input {
   outline: none;
 }
 
-#email::placeholder {
+.email::placeholder {
   font-weight: 500;
   color: #c6c4d1;
 }
 
-#btn {
+.btn {
   padding: 0.9rem;
   border-radius: 10px;
   background-color: #130f49;
